# substrate-developer-hackathon

./: README.md
substrate/: Cargo.toml  README.md  auction.json  restart.sh
substrate/runtime/: Cargo.toml
substrate/runtime/src/: auction.rs  lib.rs  linkedlist.rs
substrate/runtime/wasm/: Cargo.toml  build.sh
substrate/src/: chain_spec.rs  main.rs  service.rs
syloUI/: .gitignore  App.js  app.json  metro.config.js  package-lock.json  package.json  sylo-config.json
syloUI/Screens/: AuctionScreen.js  ListScreen.js  MyItemsScreen.js
syloUI/android/: settings.gradle
syloUI/android/app/: BUCK  build.gradle
syloUI/android/app/src/main/: AndroidManifest.xml
syloUI/ios/: Podfile
syloUI/ios/syloUI/: AppDelegate.m  Info.plist
syloUI/ios/syloUI.xcodeproj/: project.pbxproj
syloUI/ios/syloUI.xcodeproj/xcshareddata/xcschemes/: syloUI-tvOS.xcscheme  (+1 more)
syloUI/ios/syloUI/Base.lproj/: LaunchScreen.xib
syloUI/ios/syloUITests/: syloUITests.m
syloUI/release/android/0-7-2019_12-45-55/: index.android.bundle
syloUI/release/android/0-7-2019_12-56-0/: index.android.bundle
syloUI/release/android/0-7-2019_15-24-8/: index.android.bundle
syloUI/release/android/5-7-2019_23-4-55/: index.android.bundle
syloUI/release/ios/0-7-2019_12-45-7/: index.ios.bundle
syloUI/release/ios/0-7-2019_12-55-51/: index.ios.bundle
syloUI/release/ios/0-7-2019_15-23-57/: index.ios.bundle
syloUI/release/ios/5-7-2019_23-4-11/: index.ios.bundle
syloUI/scripts/: fix-modules  podinstall  renameProject.js  upload
syloUI/scripts/react-native-fixes/: RCTNetworking  sqlite3.js
(+3 files in other folders)
