[lib]
crate-type = ['cdylib']

[features]
default = []
std = ['substrate-runtime/std']

[workspace]
members = []
[profile.release]
lto = true
panic = 'abort'

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'substrate-runtime-wasm'
version = '1.0.0'
[dependencies.substrate-runtime]
default-features = false
path = '..'
